[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykap"
version = "0.2.0"
authors = [
    { name = "Cem Sinan Ozturk", email = "cem.ozturk@barcelonagse.eu" }
]
description = "KAP (Public Disclosure Platform) Documentation Wrapper for Capital Markets Board of Turkey and Borsa Istanbul Public Disclosures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "pandas",
    "requests",
    "html5lib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/cemsinano/pykap"
"Bug Tracker" = "https://github.com/cemsinano/pykap/issues"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
pykap = ["data/*.json"]
